fix: Fix not showing anything while on mobile

--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -1,4 +1,9 @@
 .footer {
+    // Until it is responsive
+    @media (max-width: 1280px) {
+      display: none;
+    }
+
     @include flex;
     justify-content: space-around;
     flex-wrap: wrap;
