--- a/src/components/Navbar/Navbar.module.scss
+++ b/src/components/Navbar/Navbar.module.scss
@@ -1,4 +1,9 @@
 .navbar {
+  // Until it is responsive
+  @media (max-width: 1280px) {
+    display: none;
+  }
+
   background-color: $primary-color;
   padding: .2rem 0;
   position: relative;
